fixed spacing issue

--- a/index.css
+++ b/index.css
@@ -139,6 +139,9 @@ p {
 
     .intro {
         line-height: 120%;
+        margin-left: 0%;
+        margin-right: 0%;
+        padding: 0px 20px 0px 20px
     }
     
     .first {
